support_tools/swigwin-3.0.12/Examples/test-suite/errors/cpp_template_not.i
%module xxx

int blah;

%template(blahi) blah<int>;




